--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <main>
 	<nav>
 		<div class="nav">
-			<a class="logo" href="#"><img src="../img/logo.svg" width="40" height="40" alt="Лого"></a>
+			<a class="logo" href="#"><img src="img/logo.svg" width="40" height="40" alt="Лого"></a>
 			<ul>
 				<li><a href="#">Контакты</a></li>
 				<li><a href="#">Курсы</a></li>
