--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			</div>
 			<div class="main-sales__money">
 				<dl class="skills-list">
-					<dt class="skill-html text-opacity">Заработано учениками: <span>400 000₽</span></dt>
+					<dt class="skill-html">Заработано учениками: <span>400 000₽</span></dt>
 					<dd class="level">
 						<div style="width:40%;">40%</div>
 					</dd>
@@ -79,6 +79,15 @@
 				</dl>
 			</div>
 		</section>
+		<section class="doing">
+			<img class="doing-img" src="img/doing.png" alt="Мощный продвинутый процессор">
+			<div class="doing-text">
+				<h2 class="doing-h">Чем мы занимаемся?</h2>
+				<p class="doing-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget neque, dignissim et feugiat elit augue in suspendisse egestas. Dictum vestibulum mi et sed nunc, orci fermentum vestibulum, morbi. Et neque, adipiscing sapien sem
+					senectus praesent aenean consequat. Aenean facilisi turpis aliquet fringilla. Nunc sem felis sed interdum feugiat mattis elit, sollicitudin. Quam pharetra rhoncus risus, cursus id elementum aliquet. Nullam turpis arcu malesuada arcu interdum placerat nisi, lobortis.</p>
+			</div>
+		</section>
+
 	</main>
 </body>
 
