--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			</div>
 		</section>
 
-
+</main>
 		<section class="main-sales">
 			<div class="main-sales__button">
 				<a href="#">Заказать курс</a>
@@ -83,12 +83,54 @@
 			<img class="doing-img" src="img/doing.png" alt="Мощный продвинутый процессор">
 			<div class="doing-text">
 				<h2 class="doing-h">Чем мы занимаемся?</h2>
-				<p class="doing-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget neque, dignissim et feugiat elit augue in suspendisse egestas. Dictum vestibulum mi et sed nunc, orci fermentum vestibulum, morbi. Et neque, adipiscing sapien sem
-					senectus praesent aenean consequat. Aenean facilisi turpis aliquet fringilla. Nunc sem felis sed interdum feugiat mattis elit, sollicitudin. Quam pharetra rhoncus risus, cursus id elementum aliquet. Nullam turpis arcu malesuada arcu interdum placerat nisi, lobortis.</p>
+				<p class="doing-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget neque, dignissim et feugiat
+					elit augue in suspendisse egestas. Dictum vestibulum mi et sed nunc, orci fermentum vestibulum, morbi. Et
+					neque, adipiscing sapien sem
+					senectus praesent aenean consequat. Aenean facilisi turpis aliquet fringilla. Nunc sem felis sed interdum
+					feugiat mattis elit, sollicitudin. Quam pharetra rhoncus risus, cursus id elementum aliquet. Nullam turpis
+					arcu malesuada arcu interdum placerat nisi, lobortis.</p>
 			</div>
 		</section>
+		<section class="fast-start">
+			<div class="faststart__block">
+				<img src="img/ellips-faststart.svg" width="100px" alt="промежуточное лого">
+				<h2>Быстрый старт</h2>
+			</div>
+			<p>Больше 90% учеников прошли полный курс и смогли собрать свой первый компьютер</p>
 
-	</main>
+			<div class="percetence">
+				<div class="percetence__block">
+					<h3>100%</h3>
+					<div></div>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Netus eget velit quisque accumsan amet tortor.
+						Velit, volutpat
+						egestas fringilla mi porttitor tempus. Placerat dui.</p>
+				</div>
+				<div class="percetence__block">
+					<h3>75%</h3>
+					<div></div>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Netus eget velit quisque accumsan amet tortor.
+						Velit, volutpat
+						egestas fringilla mi porttitor tempus. Placerat dui.</p>
+				</div>
+				<div class="percetence__block">
+					<h3>50%</h3>
+					<div></div>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Netus eget velit quisque accumsan amet tortor.
+						Velit, volutpat
+						egestas fringilla mi porttitor tempus. Placerat dui.</p>
+				</div>
+				<div class="percetence__block">
+					<h3>Итог</h3>
+					<div></div>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Netus eget velit quisque accumsan amet tortor.
+						Velit, volutpat
+						egestas fringilla mi porttitor tempus. Placerat dui.</p>
+				</div>
+			</div>
+
+		</section>
+	
 </body>
 
 </html>
