--- a/index.html
+++ b/index.html
@@ -128,9 +128,21 @@
 						egestas fringilla mi porttitor tempus. Placerat dui.</p>
 				</div>
 			</div>
-
 		</section>
-	
+	<section class="about">
+		<h2 class="main_h">Получите профессию прямо сейчас</h2>
+		<img class="imgpc" src="img/icon-pc.svg" alt="Персональный компьютер">
+		<h3 class="skill">Только практические навыки в работе</h3>
+		<p class="pone">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Netus eget velit quisque accumsan amet tortor. Velit, volutpat egestas fringilla mi porttitor tempus. Placerat dui.</p>
+		<img class="imgusb" src="img/icon-usb.svg" alt="usb">
+		<h3 class="equipment">Работа на самом современном оборудовании</h3>
+		<p class="ptwo">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Netus eget velit quisque accumsan amet tortor. Velit,
+			volutpat egestas fringilla mi porttitor tempus. Placerat dui.</p>
+			<img class="imgcable" src="img/icon-cable.svg" alt="cable">
+			<h3 class="sertificate">Сертификация по окончании обучения</h3>
+			<p class="pthree">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Netus eget velit quisque accumsan amet tortor. Velit,
+				volutpat egestas fringilla mi porttitor tempus. Placerat dui.</p>
+	</section>
 </body>
 
 </html>
