--- a/index.html
+++ b/index.html
@@ -49,99 +49,181 @@
 			</div>
 		</section>
 
-</main>
-		<section class="main-sales">
-			<div class="main-sales__button">
-				<a href="#">Заказать курс</a>
-			</div>
-			<div>
-				<table class="main-sales__table">
-					<tr>
-						<td class="text-opacity">Учеников всего:</td>
-						<td>200</td>
-					</tr>
-					<tr>
-						<td class="text-opacity">Успешно закончили курс:</td>
-						<td>190</td>
-					</tr>
-				</table>
-			</div>
-			<div class="main-sales__money">
-				<dl class="skills-list">
-					<dt class="skill-html">Заработано учениками: <span>400 000₽</span></dt>
-					<dd class="level">
-						<div style="width:40%;">40%</div>
-					</dd>
-					<dd class="main-sales__money_flex">
-						<p class="text-opacity">0</p>
-						<p class="text-opacity">1 000 000&#x20bd;</p>
-					</dd>
-				</dl>
-			</div>
-		</section>
-		<section class="doing">
-			<img class="doing-img" src="img/doing.png" alt="Мощный продвинутый процессор">
-			<div class="doing-text">
-				<h2 class="doing-h">Чем мы занимаемся?</h2>
-				<p class="doing-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget neque, dignissim et feugiat
-					elit augue in suspendisse egestas. Dictum vestibulum mi et sed nunc, orci fermentum vestibulum, morbi. Et
-					neque, adipiscing sapien sem
-					senectus praesent aenean consequat. Aenean facilisi turpis aliquet fringilla. Nunc sem felis sed interdum
-					feugiat mattis elit, sollicitudin. Quam pharetra rhoncus risus, cursus id elementum aliquet. Nullam turpis
-					arcu malesuada arcu interdum placerat nisi, lobortis.</p>
-			</div>
-		</section>
-		<section class="fast-start">
-			<div class="faststart__block">
-				<img src="img/ellips-faststart.svg" width="100px" alt="промежуточное лого">
-				<h2>Быстрый старт</h2>
-			</div>
-			<p>Больше 90% учеников прошли полный курс и смогли собрать свой первый компьютер</p>
+	</main>
+	<section class="main-sales">
+		<div class="main-sales__button">
+			<a href="#">Заказать курс</a>
+		</div>
+		<div>
+			<table class="main-sales__table">
+				<tr>
+					<td class="text-opacity">Учеников всего:</td>
+					<td>200</td>
+				</tr>
+				<tr>
+					<td class="text-opacity">Успешно закончили курс:</td>
+					<td>190</td>
+				</tr>
+			</table>
+		</div>
+		<div class="main-sales__money">
+			<dl class="skills-list">
+				<dt class="skill-html">Заработано учениками: <span>400 000₽</span></dt>
+				<dd class="level">
+					<div style="width:40%;">40%</div>
+				</dd>
+				<dd class="main-sales__money_flex">
+					<p class="text-opacity">0</p>
+					<p class="text-opacity">1 000 000&#x20bd;</p>
+				</dd>
+			</dl>
+		</div>
+	</section>
+	<section class="doing">
+		<img class="doing-img" src="img/doing.png" alt="Мощный продвинутый процессор">
+		<div class="doing-text">
+			<h2 class="doing-h">Чем мы занимаемся?</h2>
+			<p class="doing-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget neque, dignissim et feugiat
+				elit augue in suspendisse egestas. Dictum vestibulum mi et sed nunc, orci fermentum vestibulum, morbi. Et
+				neque, adipiscing sapien sem
+				senectus praesent aenean consequat. Aenean facilisi turpis aliquet fringilla. Nunc sem felis sed interdum
+				feugiat mattis elit, sollicitudin. Quam pharetra rhoncus risus, cursus id elementum aliquet. Nullam turpis
+				arcu malesuada arcu interdum placerat nisi, lobortis.</p>
+		</div>
+	</section>
+	<section class="fast-start">
+		<div class="faststart__block">
+			<img src="img/ellips-faststart.svg" width="100px" alt="промежуточное лого">
+			<h2>Быстрый старт</h2>
+		</div>
+		<p>Больше 90% учеников прошли полный курс и смогли собрать свой первый компьютер</p>
 
-			<div class="percetence">
-				<div class="percetence__block">
-					<h3>100%</h3>
-					<div></div>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Netus eget velit quisque accumsan amet tortor.
-						Velit, volutpat
-						egestas fringilla mi porttitor tempus. Placerat dui.</p>
-				</div>
-				<div class="percetence__block">
-					<h3>75%</h3>
-					<div></div>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Netus eget velit quisque accumsan amet tortor.
-						Velit, volutpat
-						egestas fringilla mi porttitor tempus. Placerat dui.</p>
-				</div>
-				<div class="percetence__block">
-					<h3>50%</h3>
-					<div></div>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Netus eget velit quisque accumsan amet tortor.
-						Velit, volutpat
-						egestas fringilla mi porttitor tempus. Placerat dui.</p>
-				</div>
-				<div class="percetence__block">
-					<h3>Итог</h3>
-					<div></div>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Netus eget velit quisque accumsan amet tortor.
-						Velit, volutpat
-						egestas fringilla mi porttitor tempus. Placerat dui.</p>
-				</div>
+		<div class="percetence">
+			<div class="percetence__block">
+				<h3>100%</h3>
+				<div></div>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Netus eget velit quisque accumsan amet tortor.
+					Velit, volutpat
+					egestas fringilla mi porttitor tempus. Placerat dui.</p>
 			</div>
-		</section>
+			<div class="percetence__block">
+				<h3>75%</h3>
+				<div></div>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Netus eget velit quisque accumsan amet tortor.
+					Velit, volutpat
+					egestas fringilla mi porttitor tempus. Placerat dui.</p>
+			</div>
+			<div class="percetence__block">
+				<h3>50%</h3>
+				<div></div>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Netus eget velit quisque accumsan amet tortor.
+					Velit, volutpat
+					egestas fringilla mi porttitor tempus. Placerat dui.</p>
+			</div>
+			<div class="percetence__block">
+				<h3>Итог</h3>
+				<div></div>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Netus eget velit quisque accumsan amet tortor.
+					Velit, volutpat
+					egestas fringilla mi porttitor tempus. Placerat dui.</p>
+			</div>
+		</div>
+	</section>
 	<section class="about">
 		<h2 class="main_h">Получите профессию прямо сейчас</h2>
 		<img class="imgpc" src="img/icon-pc.svg" alt="Персональный компьютер">
 		<h3 class="skill">Только практические навыки в работе</h3>
-		<p class="pone">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Netus eget velit quisque accumsan amet tortor. Velit, volutpat egestas fringilla mi porttitor tempus. Placerat dui.</p>
+		<p class="pone">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Netus eget velit quisque accumsan amet
+			tortor. Velit, volutpat egestas fringilla mi porttitor tempus. Placerat dui.</p>
 		<img class="imgusb" src="img/icon-usb.svg" alt="usb">
 		<h3 class="equipment">Работа на самом современном оборудовании</h3>
-		<p class="ptwo">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Netus eget velit quisque accumsan amet tortor. Velit,
+		<p class="ptwo">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Netus eget velit quisque accumsan amet
+			tortor. Velit,
 			volutpat egestas fringilla mi porttitor tempus. Placerat dui.</p>
-			<img class="imgcable" src="img/icon-cable.svg" alt="cable">
-			<h3 class="sertificate">Сертификация по окончании обучения</h3>
-			<p class="pthree">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Netus eget velit quisque accumsan amet tortor. Velit,
-				volutpat egestas fringilla mi porttitor tempus. Placerat dui.</p>
+		<img class="imgcable" src="img/icon-cable.svg" alt="cable">
+		<h3 class="sertificate">Сертификация по окончании обучения</h3>
+		<p class="pthree">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Netus eget velit quisque accumsan amet
+			tortor. Velit,
+			volutpat egestas fringilla mi porttitor tempus. Placerat dui.</p>
+	</section>
+	<section>
+		<div class="partner">
+			<img src="img/ellipse-partner.svg" alt="symbol">
+			<h2>Партнеры - топовые бренды</h2>
+		</div>
+		<div class="msi_one msiimg">
+			<img src="img/logomsi.svg" alt="MSI">
+			<img src="img/logomsi.svg" alt="MSI">
+			<img src="img/logomsi.svg" alt="MSI">
+			<img src="img/logomsi.svg" alt="MSI">
+		</div>
+		<div class="msi_two msiimg">
+			<img src="img/logomsi.svg" alt="MSI">
+			<img src="img/logomsi.svg" alt="MSI">
+			<img src="img/logomsi.svg" alt="MSI">
+			<img src="img/logomsi.svg" alt="MSI">
+		</div>
+	</section>
+	<section class="learning">
+		<img src="img/ellipse-program.svg" alt="symbol">
+		<h2>Программа обучения</h2>
+		<p>Больше 90% учеников прошли полный курс и смогли собрать свой первый компьютер</p>
+		<div class="steps">
+			<div class="left-section">
+				<div class="leftweak">
+					<p>Неделя №1</p>
+					<h3>Красивая часть курса, которая помогает в успехе</h3>
+					<div></div>
+					<div></div>
+				</div>
+				<div class="leftweak">
+					<p>Неделя №3</p>
+					<h3>Красивая часть курса,
+						которая помогает в успехе</h3>
+					<div></div>
+					<div></div>
+				</div>
+				<div class="leftweak">
+					<p>Неделя №5</p>
+					<h3>Красивая часть курса,
+						которая помогает в успехе</h3>
+					<div></div>
+					<div></div>
+				</div>
+				<div class="leftweak">
+					<p>Неделя №7</p>
+					<h3>Красивая часть курса,
+						которая помогает в успехе</h3>
+					<div></div>
+					<div></div>
+				</div>
+			</div>
+			<div class="border"></div>
+			<div class="rightsection">
+				<div class="rightweak">
+					<p>Неделя №2</p>
+					<h3>Красивая часть курса,
+						которая помогает в успехе</h3>
+					<div></div>
+					<div></div>
+				</div>
+				<div class="rightweak">
+					<p>Неделя №4</p>
+					<h3>Красивая часть курса,
+						которая помогает в успехе</h3>
+					<div></div>
+					<div></div>
+				</div>
+				<div class="rightweak">
+					<p>Неделя №6</p>
+					<h3>Красивая часть курса,
+						которая помогает в успехе</h3>
+					<div></div>
+					<div></div>
+				</div>
+			</div>
+		</div>
+
 	</section>
 </body>
 
