--- a/index.html
+++ b/index.html
@@ -223,7 +223,32 @@
 				</div>
 			</div>
 		</div>
-
+		<section>
+			<div class="mentors">
+				<img src="img/ellipse-mentor.svg" alt="logo">
+				<h2>Ваши преподаватели</h2>
+				<div class="mentor">
+					<div>
+						<img src="img/mentorone.jpg" alt="photo">
+						<h2>Дмитрий Иванов</h2>
+						<p>Специалист по видеокартам</p>
+						<a href="#">Биография</a>
+					</div>
+					<div>
+						<img src="img/mentortwo.jpg" alt="photo">
+						<h2>Дмитрий Иванов</h2>
+						<p>Специалист по видеокартам</p>
+						<a href="#">Биография</a>
+					</div>
+					<div>
+						<img src="img/mentorthree.jpg" alt="photo">
+						<h2>Дмитрий Иванов</h2>
+						<p>Специалист по видеокартам</p>
+						<a href="#">Биография</a>
+					</div>
+				</div>
+			</div>
+		</section>
 	</section>
 </body>
 
