--- a/index.html
+++ b/index.html
@@ -223,33 +223,41 @@
 				</div>
 			</div>
 		</div>
-		<section>
-			<div class="mentors">
-				<img src="img/ellipse-mentor.svg" alt="logo">
-				<h2>Ваши преподаватели</h2>
-				<div class="mentor">
-					<div>
-						<img src="img/mentorone.jpg" alt="photo">
-						<h2>Дмитрий Иванов</h2>
-						<p>Специалист по видеокартам</p>
-						<a href="#">Биография</a>
-					</div>
-					<div>
-						<img src="img/mentortwo.jpg" alt="photo">
-						<h2>Дмитрий Иванов</h2>
-						<p>Специалист по видеокартам</p>
-						<a href="#">Биография</a>
-					</div>
-					<div>
-						<img src="img/mentorthree.jpg" alt="photo">
-						<h2>Дмитрий Иванов</h2>
-						<p>Специалист по видеокартам</p>
-						<a href="#">Биография</a>
-					</div>
-				</div>
-			</div>
-		</section>
 	</section>
+	<section>
+		<div class="mentors">
+			<img src="img/ellipse-mentor.svg" alt="logo">
+			<h2>Ваши преподаватели</h2>
+		</div>
+		<div class="mentor">
+			<div>
+				<img src="img/altmentorone.jpg" width="190px" height="190px" alt="photo">
+				<h2>Дмитрий Иванов</h2>
+				<p>Специалист по видеокартам</p>
+				<a href="#">Биография</a>
+			</div>
+			<div>
+				<img src="img/altmentortwo.jpg" width="190px" height="190px" alt="photo">
+				<h2>Дмитрий Иванов</h2>
+				<p>Специалист по видеокартам</p>
+				<a href="#">Биография</a>
+			</div>
+			<div>
+				<img src="img/altmentorthree.jpg" width="190px" height="190px" alt="photo">
+				<h2>Дмитрий Иванов</h2>
+				<p>Специалист по видеокартам</p>
+				<a href="#">Биография</a>
+			</div>
+			<div>
+				<img src="img/altmentorfour.jpg" width="190px" height="190px" alt="photo">
+				<h2>Дмитрий Иванов</h2>
+				<p>Специалист по видеокартам</p>
+				<a href="#">Биография</a>
+			</div>
+		</div>
+
+	</section>
+
 </body>
 
 </html>
