--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
 		</div>
 	</section>
 	<section class="doing">
-		<img class="doing-img" src="img/doing.png" alt="Мощный продвинутый процессор">
+		<div class="doing-img">
+			<img src="img/doing.png" alt="Мощный продвинутый процессор">
+		</div>
 		<div class="doing-text">
 			<h2 class="doing-h">Чем мы занимаемся?</h2>
 			<p class="doing-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget neque, dignissim et feugiat
