--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
 			<h1>Первый курс по компьютерной сборке</h1>
 			<div class="timer">
 				<div class="timer__time">
-					<h2>18</h2>
+					<h2 id="days">18</h2>
 					<p>Дней</p>
 				</div>
 				<div class="timer__time">
-					<h2>18</h2>
+					<h2 id="hours">18</h2>
 					<p>Часов</p>
 				</div>
 				<div class="timer__time">
-					<h2>18</h2>
+					<h2 id="minutes">18</h2>
 					<p>Минут</p>
 				</div>
 				<div class="timer__time">
-					<h2>18</h2>
+					<h2 id="seconds">18</h2>
 					<p>Секунд</p>
 				</div>
 			</div>
@@ -259,7 +259,7 @@
 		</div>
 
 	</section>
-
+<script src="script.js"></script>
 </body>
 
 </html>
