--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 				<a class="logo" href="#"><img src="img/logo.svg" width="40" height="40" alt="Лого"></a>
 				<ul>
 					<li><a href="#">Контакты</a></li>
-					<li><a href="#">Курсы</a></li>
-					<li><a href="#">Расписание</a></li>
-					<li><a href="#">Преподаватели</a></li>
+					<li><a href="#sales">Курсы</a></li>
+					<li><a href="#learning">Расписание</a></li>
+					<li><a href="#mentors">Преподаватели</a></li>
 					<li><a href="#">Рассылка</a></li>
 					<li><a href="#">Контакты</a></li>
 				</ul>
@@ -50,7 +50,7 @@
 		</section>
 
 	</main>
-	<section class="main-sales">
+	<section class="main-sales" is="sales">
 		<div class="main-sales__button">
 			<a href="#">Заказать курс</a>
 		</div>
@@ -166,7 +166,7 @@
 			<img src="img/logomsi.svg" alt="MSI">
 		</div>
 	</section>
-	<section class="learning">
+	<section class="learning" id="learning">
 		<img src="img/ellipse-program.svg" alt="symbol">
 		<h2>Программа обучения</h2>
 		<p>Больше 90% учеников прошли полный курс и смогли собрать свой первый компьютер</p>
@@ -227,7 +227,7 @@
 		</div>
 	</section>
 	<section>
-		<div class="mentors">
+		<div class="mentors" id="mentors">
 			<img src="img/ellipse-mentor.svg" alt="logo">
 			<h2>Ваши преподаватели</h2>
 		</div>
